fix(instance) on narrow graphic console, rely on the scaled height of the area to avoid scrollbars. fixes #1748

--- a/src/sass/_instance_detail_console.scss
+++ b/src/sass/_instance_detail_console.scss
@@ -21,6 +21,7 @@
 
   #spice-screen canvas {
     background: black;
+    margin-bottom: 0;
   }
 }
 
